<resources>
    <string name="app_name">Where</string>

    <string name="action_settings">Settings</string>
    <string name="action_create_catalog">Inventarkatalog anlegen</string>
    <string name="action_clear_all_tables">Alle Tabellen leeren</string>
    <string name="action_create_item">Eintrag anlegen</string>

    <string name="message_no_catalog">Tippen um Inventarkatalog anzulegen</string>
    <string name="message_create_catalog_title">Inventarkatalog anlegen</string>
    <string name="message_create_catalog_hint">Geben Sie den Katalognamen ein</string>
    <string name="buttonText_create_catalog">Erstellen</string>
    <string name="message_create_catalog_complete">Katalog %s wurde angelegt</string>
    <string name="title_activity_item_list">Gegenstände</string>
    <string name="message_no_item">Tippen um Eintrag zu erstellen</string>
    <string name="title_activity_item_edit">Gegenstand bearbeiten</string>
    <string name="textView_item_description">Gegenstand</string>
    <string name="message_create_item_hint">Geben Sie den Gegenstand ein</string>
    <string name="textView_item_location">Lagerort</string>
    <string name="message_create_itemLocation_hint">Geben Sie den Lagerort ein</string>
    <string name="textView_item_room">Lagerraum</string>
    <string name="message_create_itemRoom_hint">Geben Sie den Lagerraum ein</string>
    <string name="buttonText_save_item">Speichern</string>
</resources>
